compiler/actonc/test/typeerrors/ex7.act
actor main(env):
    var k = 3
    pure def g():
        return k
    
